@@ -59,7 +59,8 @@ GtkWidget *fixed_layout;
 GList *app_list;
 GList *table_list;
 gboolean running;
-int pages, total_page_itens, page_index;
+gboolean filtered;
+int pages, page_index;
 int page_count;
 
 typedef struct {
@@ -112,20 +113,20 @@ static GtkWidget *lapps_create_table() {
 	GtkWidget *app_box = NULL;
 	GtkWidget *event_box = NULL;
 	GtkWidget *app_label = NULL;
-	GtkWidget *table = NULL;
+	GtkWidget *this_table = NULL;
 	GList *test_list = NULL;
 	GdkPixbuf *icon_pix = NULL;
 	GdkPixbuf *target_icon_pix = NULL;
 	gchar *app_name = NULL;
 
-	table = gtk_table_new(grid[0], grid[1], TRUE);
-	gtk_table_set_row_spacings(GTK_TABLE(table), 50);
-	gtk_table_set_col_spacings(GTK_TABLE(table), 40);
+	this_table = gtk_table_new(grid[0], grid[1], TRUE);
+	gtk_table_set_row_spacings(GTK_TABLE(this_table), 50);
+	gtk_table_set_col_spacings(GTK_TABLE(this_table), 40);
 
 	int i = 0;
 	int j = 0;
+
 	for (test_list = app_list; test_list != NULL; test_list = test_list->next) {
-		if (g_app_info_get_icon(test_list->data) != NULL) {
 			app_name = g_strdup(g_app_info_get_name(test_list->data));
 			icon_pix = shadow_icon(lapps_application_icon(test_list->data));
 			target_icon_pix = gdk_pixbuf_scale_simple(icon_pix, icon_size, icon_size, GDK_INTERP_BILINEAR);
@@ -141,7 +142,7 @@ static GtkWidget *lapps_create_table() {
 			app_label = gtk_image_new_from_pixbuf(create_app_name(app_name, DEFAULTFONTSIZE));
 			gtk_widget_set_size_request(app_label, 250, 50);
 			gtk_box_pack_start(GTK_BOX(app_box), app_label, FALSE, FALSE, 0);
-			gtk_table_attach(GTK_TABLE(table), event_box, j, j + 1, i, i + 1, GTK_SHRINK, GTK_FILL, 0, 0);
+			gtk_table_attach(GTK_TABLE(this_table), event_box, j, j + 1, i, i + 1, GTK_SHRINK, GTK_FILL, 0, 0);
 			g_object_unref(icon_pix);
 			g_object_unref(target_icon_pix);
 			if (j < grid[1] - 1) {
@@ -154,18 +155,18 @@ static GtkWidget *lapps_create_table() {
 				app_list = test_list->next;
 				break;
 			}
-		}
 	}
 
 	g_free(app_name);
 
-	return table;
+	return this_table;
 }
 
-static void lapps_app_list() {
+static void lapps_app_list(gchar *filter) {
 	GList *test_list = NULL;
 	GList *all_app_list = NULL;
 	int app_count = 0;
+	int total_page_itens = 0;
 
 	all_app_list = g_app_info_get_all();
 
@@ -173,11 +174,29 @@ static void lapps_app_list() {
 
 	app_list = NULL;
 
-	for (test_list = all_app_list; test_list != NULL; test_list = test_list->next) {
-		if ((g_app_info_get_icon(test_list->data) != NULL) && (g_app_info_get_description(test_list->data) != NULL)) {
-			app_list = g_list_insert_sorted(app_list, g_app_info_dup(test_list->data),
-					(GCompareFunc) app_name_comparator);
-			app_count++;
+	if (filtered && strlen(filter) > 0) {
+		for (test_list = all_app_list; test_list != NULL; test_list = test_list->next) {
+			if ((g_app_info_get_icon(test_list->data) != NULL)
+					&& (g_app_info_get_description(test_list->data) != NULL)) {
+				gchar *name = g_ascii_strdown(g_app_info_get_name(test_list->data), -1);
+				gchar *desc = g_ascii_strdown(g_app_info_get_description(test_list->data), -1);
+				if (g_strrstr(name, filter) || g_strrstr(desc, filter)) {
+					app_list = g_list_insert_sorted(app_list, g_app_info_dup(test_list->data),
+							(GCompareFunc) app_name_comparator);
+					app_count++;
+				}
+			}
+		}
+	}
+
+	if(!filtered){
+		for (test_list = all_app_list; test_list != NULL; test_list = test_list->next) {
+			if ((g_app_info_get_icon(test_list->data) != NULL)
+					&& (g_app_info_get_description(test_list->data) != NULL)) {
+				app_list = g_list_insert_sorted(app_list, g_app_info_dup(test_list->data),
+						(GCompareFunc) app_name_comparator);
+				app_count++;
+			}
 		}
 	}
 
@@ -253,9 +272,24 @@ static void lapps_indicator_fw_hover(GtkWidget *widget, GdkEvent *event, gpointe
 		lapps_update_indicator_fw(FALSE);
 }
 
+static void lapps_clear(){
+	GList *test_list = NULL;
+
+	table = NULL;
+	for (test_list = table_list; test_list != NULL; test_list = test_list->next) {
+		gtk_widget_hide_all(test_list->data);
+	}
+
+	table_list = NULL;
+	gtk_widget_draw(window, NULL);
+}
+
 static void lapps_show_page(gboolean up) {
 	GList *test_list = NULL;
 	int i = 0;
+
+	if (filtered)
+			lapps_clear();
 
 	if (up && page_count < pages) {
 		page_count++;
@@ -264,11 +298,25 @@ static void lapps_show_page(gboolean up) {
 		gtk_fixed_put(GTK_FIXED(fixed_layout), table, 250, 220);
 	}
 
-	for (test_list = table_list; test_list != NULL; test_list = test_list->next) {
-		gtk_widget_hide_all(test_list->data);
-		if (i == page_index)
+	if (up && filtered) {
+		page_count++;
+		table = lapps_create_table();
+		table_list = g_list_append(table_list, table);
+		gtk_fixed_put(GTK_FIXED(fixed_layout), table, 250, 220);
+		for (test_list = table_list; test_list != NULL; test_list = test_list->next) {
 			gtk_widget_show_all(test_list->data);
-		i++;
+			i++;
+		}
+	}
+
+	i = 0;
+	if(!filtered) {
+		for (test_list = table_list; test_list != NULL; test_list = test_list->next) {
+			gtk_widget_hide_all(test_list->data);
+			if (i == page_index)
+				gtk_widget_show_all(test_list->data);
+			i++;
+		}
 	}
 
 	lapps_update_indicator_rw(FALSE);
@@ -329,6 +377,59 @@ static void lapps_indicator_fw_clicked(GtkWidget *widget, GdkEventButton *event,
 	(page_index < pages) ? lapps_show_page(TRUE) : 0;
 }
 
+static void lapps_search(GtkEntry *entry, GtkEntryIconPosition icon_pos, GdkEventButton *event, gpointer userdata) {
+	const gchar *filter = gtk_entry_get_text(entry);
+
+	page_index = 0;
+	page_count = 0;
+
+	if (GTK_ENTRY_ICON_SECONDARY == icon_pos) {
+		if (strlen(filter) > 0) {
+			filtered = TRUE;
+			gtk_entry_set_icon_from_stock(GTK_ENTRY(entry), GTK_ENTRY_ICON_PRIMARY, GTK_STOCK_CLEAR);
+			lapps_app_list(g_ascii_strdown(filter, -1));
+			lapps_show_page(TRUE);
+			return;
+		} else {
+			filtered = FALSE;
+			lapps_clear();
+			lapps_app_list(NULL);
+			lapps_show_page(TRUE);
+		}
+	}
+
+	if (((GTK_ENTRY_ICON_PRIMARY == icon_pos) && filtered)) {
+		gtk_entry_set_text(entry, "");
+		gtk_entry_set_icon_from_stock(GTK_ENTRY(entry), GTK_ENTRY_ICON_PRIMARY, NULL);
+		filtered = FALSE;
+		lapps_clear();
+		lapps_app_list(NULL);
+		lapps_show_page(TRUE);
+	}
+}
+
+static void lapps_search_(GtkEntry *entry, gpointer userdata) {
+	const gchar *filter = gtk_entry_get_text(entry);
+
+	page_index = 0;
+	page_count = 0;
+
+	if (strlen(filter) > 0) {
+		filtered = TRUE;
+		gtk_entry_set_icon_from_stock(GTK_ENTRY(entry), GTK_ENTRY_ICON_PRIMARY, GTK_STOCK_CLEAR);
+		lapps_app_list(g_ascii_strdown(filter, -1));
+		lapps_show_page(TRUE);
+		return;
+	} else {
+		gtk_entry_set_text(entry, "");
+		gtk_entry_set_icon_from_stock(GTK_ENTRY(entry), GTK_ENTRY_ICON_PRIMARY, NULL);
+		filtered = FALSE;
+		lapps_clear();
+		lapps_app_list(NULL);
+		lapps_show_page(TRUE);
+	}
+}
+
 static void lapps_create_main_window(LaunchAppsPlugin *lapps) {
 	GtkWidget *layout = NULL;
 	GtkWidget *bg_image = NULL;
@@ -375,17 +476,17 @@ static void lapps_create_main_window(LaunchAppsPlugin *lapps) {
 
 	// search entry
 	entry = gtk_entry_new();
-	// gtk_entry_set_text( GTK_ENTRY(entry), "Search");
-	// Bind the callback function to the insert text event
-	//g_signal_connect(GTK_OBJECT(entry), "insert-text",
-	//                     G_CALLBACK(on_insert_text), NULL);
+	gtk_entry_set_icon_from_stock (GTK_ENTRY(entry), GTK_ENTRY_ICON_SECONDARY, GTK_STOCK_FIND);
+	g_signal_connect(GTK_OBJECT(entry), "icon-press", G_CALLBACK(lapps_search), NULL);
+	g_signal_connect(GTK_OBJECT(entry), "activate", G_CALLBACK(lapps_search_), NULL);
 	gtk_fixed_put(GTK_FIXED(fixed_layout), GTK_WIDGET(entry), (s_width / 2) - 125, 50);
 	gtk_widget_set_size_request(entry, 250, 30);
 
 	page_index = 0;
 	page_count = 0;
+	filtered = FALSE;
 
-	lapps_app_list();
+	lapps_app_list(NULL);
 
 	gtk_container_add(GTK_CONTAINER(layout), fixed_layout);
 
